added split function

--- a/overview_Jan9.ipynb
+++ b/overview_Jan9.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPkryGmUoiqL5aF78apN1tw",
+      "authorship_tag": "ABX9TyPb763Fy4JsEw54nPktI4Wq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
         "id": "r0lTwcWX6dha",
         "outputId": "7bcc3443-14e7-4b36-bf85-57c49481cc65"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -73,7 +73,7 @@
       "metadata": {
         "id": "YuvuTkDWAG3S"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -119,7 +119,7 @@
         "id": "p2057pAhVZPJ",
         "outputId": "e85cee25-5cc3-4581-ccf2-454716c583a3"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,13 +164,217 @@
     {
       "cell_type": "code",
       "source": [
+        "print(\"First 5 elements of file_list:\", file_list[:5])\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gqNy1gO2ALyW",
+        "outputId": "929f6243-1966-43eb-e3b3-b40cebcf93db"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "First 5 elements of file_list: ['/root/.cache/kagglehub/datasets/mittalshubham/images256/versions/10/b/boat_deck/gsun_1538b33ede57e79617e43a3bcedba193.jpg', '/root/.cache/kagglehub/datasets/mittalshubham/images256/versions/10/s/ski_slope/gsun_36d46340c48668fa9edb6322434a80f6.jpg', '/root/.cache/kagglehub/datasets/mittalshubham/images256/versions/10/v/veranda/gsun_bdc9b99035475abd0e9ddb9ff6aa8519.jpg', '/root/.cache/kagglehub/datasets/mittalshubham/images256/versions/10/m/marsh/gsun_62ecf37bc49deb7723b1e9a2f6f68de3.jpg', '/root/.cache/kagglehub/datasets/mittalshubham/images256/versions/10/p/pavilion/gsun_a20ff48f20f425c6e625babc59810662.jpg']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Path to dataset files:\", path)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3xQ_od9-_9LD",
+        "outputId": "b09f327d-e075-4cf7-aa6f-b641db898650"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Path to dataset files: /root/.cache/kagglehub/datasets/mittalshubham/images256/versions/10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Length of file_list before removal:\",len(file_list))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6d6A5jtOAU2-",
+        "outputId": "97fb33fa-6a69-4d2d-d18a-8b68d0c413cb"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Length of file_list before removal: 30000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "target_file = f'{path}/c/cottage_garden/gsun_6c03ae81ab181303144ed2bda2757c89.jpg'\n"
+      ],
+      "metadata": {
+        "id": "b34RAGQNAn0s"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Path we're trying to remove:\", target_file)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bIHx74HfAsxB",
+        "outputId": "8ee68369-73b5-4ace-daf4-f46ff7e08bc8"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Path we're trying to remove: /root/.cache/kagglehub/datasets/mittalshubham/images256/versions/10/c/cottage_garden/gsun_6c03ae81ab181303144ed2bda2757c89.jpg\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Check if the file exists in file_list using a more robust method\n",
+        "if target_file in file_list:\n",
+        "    file_list.remove(target_file)\n",
+        "    print(\"File removed successfully\")\n",
+        "else:\n",
+        "    print(f\"Warning: {target_file} not found in file_list.\")\n",
+        "print(\"Length of file_list after removal:\",len(file_list))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o4LHHSe0A0qV",
+        "outputId": "42cfb615-2a7a-4e85-d794-8b84e4e9bf6a"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Warning: /root/.cache/kagglehub/datasets/mittalshubham/images256/versions/10/c/cottage_garden/gsun_6c03ae81ab181303144ed2bda2757c89.jpg not found in file_list.\n",
+            "Length of file_list after removal: 30000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class CustomImageDataset(Dataset):\n",
+        "    def __init__(self, image_paths, transform=None):\n",
+        "        self.image_paths = image_paths\n",
+        "        self.transform = transform\n",
+        "\n",
+        "    def __len__(self):\n",
+        "        return len(self.image_paths)\n",
+        "\n",
+        "    def __getitem__(self, idx):\n",
+        "        img_path = self.image_paths[idx]\n",
+        "        img = Image.open(img_path).convert('RGB')  # Open image and convert to RGB\n",
+        "\n",
+        "        if self.transform:\n",
+        "            img = self.transform(img)\n",
+        "\n",
+        "        return {'image': img, 'path': img_path}"
+      ],
+      "metadata": {
+        "id": "bFGlXKFoBA1-"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "transform = transforms.Compose([\n",
+        "    transforms.Resize((256, 256)),\n",
+        "    transforms.ToTensor(),\n",
+        "])\n",
+        "dataset = CustomImageDataset(file_list, transform=transform)"
+      ],
+      "metadata": {
+        "id": "lzzmx8nGBJIr"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_size = int(0.8 * len(dataset))\n",
+        "val_size = int(0.1 * len(dataset))\n",
+        "test_size = len(dataset) - train_size - val_size"
+      ],
+      "metadata": {
+        "id": "w6xritv5BQeW"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "file_list.remove(f'{path}/c/cottage_garden/gsun_6c03ae81ab181303144ed2bda2757c89.jpg')"
       ],
       "metadata": {
-        "id": "hu0V8WKnKuSe"
+        "id": "hu0V8WKnKuSe",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 147
+        },
+        "outputId": "3fc39a07-30f4-4e44-8b94-a76a4cc05bf0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "list.remove(x): x not in list",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-8-f4856bb16e68>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfile_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'{path}/c/cottage_garden/gsun_6c03ae81ab181303144ed2bda2757c89.jpg'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m: list.remove(x): x not in list"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
