--- a/Simple_method_Jan12.ipynb
+++ b/Simple_method_Jan12.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP546UphL11bvr/4ANEqKOF",
+      "authorship_tag": "ABX9TyOC0W4XbYfdNswfBvwVbpCA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,12 +47,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "wk4O5_2tOkO4"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import os\n",
+        "import matplotlib.pyplot as plt\n",
+        "import warnings\n",
+        "from tensorflow.keras.applications.vgg19 import preprocess_input\n",
+        "from tensorflow.keras.preprocessing import image, image_dataset_from_directory\n",
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator as IDG\n",
+        "from imblearn.over_sampling import SMOTE\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow import keras\n",
+        "import tensorflow\n",
+        "import tensorflow as tf\n",
+        "from tensorflow.keras.models import Model\n",
+        "from tensorflow.keras.applications.vgg16 import VGG16\n",
+        "from tensorflow.keras.layers import Input, Lambda, Dense, Flatten, Dropout\n",
+        "from tensorflow.keras.models import Model\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "import seaborn as sns\n",
+        "import pathlib\n",
+        "from tensorflow.keras.utils import plot_model\n",
+        "from keras.callbacks import ModelCheckpoint, ReduceLROnPlateau, EarlyStopping\n",
+        "from sklearn.metrics import classification_report, confusion_matrix"
+      ]
     },
     {
       "cell_type": "code",
