remove extra cell

--- a/Simple_method_Jan12.ipynb
+++ b/Simple_method_Jan12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMYtSE9D9y43BnT7DJEdrGw",
+      "authorship_tag": "ABX9TyN+8zbJVv7dzy87iOceCmrm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -137,27 +137,17 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "print(path)"
+        "> The kagglehub library is used to interact with Kaggle's datasets, models, and other resources. It provides functions to download datasets directly from Kaggle.\n",
+        "\n",
+        "> The dataset_download function is used to download a dataset from Kaggle. The argument \"katalniraj/adni-extracted-axial\" specifies the dataset to download. This is the dataset's identifier on Kaggle, where katalniraj is the user who uploaded the dataset, and adni-extracted-axial is the name of the dataset.\n",
+        "\n",
+        "> The function returns the path where the dataset is downloaded. This path is stored in the variable path."
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "rRiy2LwMJdHg",
-        "outputId": "ef205937-57e8-4e07-95ef-76baeb4eff76"
-      },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/root/.cache/kagglehub/datasets/katalniraj/adni-extracted-axial/versions/1\n"
-          ]
-        }
-      ]
+        "id": "JPb6ltYSKPL1"
+      }
     },
     {
       "cell_type": "code",
