--- a/Simple_method_Jan12.ipynb
+++ b/Simple_method_Jan12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyN+8zbJVv7dzy87iOceCmrm",
+      "authorship_tag": "ABX9TyNN+4ek3FcdQheyBAfoVbkV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -147,6 +147,25 @@
       ],
       "metadata": {
         "id": "JPb6ltYSKPL1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> This line prints the path where the dataset files are stored. This is useful for verifying that the dataset has been downloaded correctly and to know where the files are located.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "QY3SK52iK74d"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Loading the Dataset for Training"
+      ],
+      "metadata": {
+        "id": "lj3AnWu7LFGo"
       }
     },
     {
