--- a/Simple_method_Jan12.ipynb
+++ b/Simple_method_Jan12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNN+4ek3FcdQheyBAfoVbkV",
+      "authorship_tag": "ABX9TyMA4FNR+4dbKaiyJqtpaegJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,6 +48,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Import Libraries"
+      ],
+      "metadata": {
+        "id": "Fuyjyit2LI_S"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -79,6 +88,15 @@
         "from keras.callbacks import ModelCheckpoint, ReduceLROnPlateau, EarlyStopping\n",
         "from sklearn.metrics import classification_report, confusion_matrix"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Download datasets directly from Kaggle"
+      ],
+      "metadata": {
+        "id": "ZdYh1ZmLLXg_"
+      }
     },
     {
       "cell_type": "code",
