added explanation abt arguments

--- a/Simple_method_Jan12.ipynb
+++ b/Simple_method_Jan12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMA4FNR+4dbKaiyJqtpaegJ",
+      "authorship_tag": "ABX9TyMhtTdHVvUE/A45Cy2O4rmS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -230,9 +230,33 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "> The image_dataset_from_directory function from TensorFlow's keras.preprocessing module is used to load images from a directory into a tf.data.Dataset object.\n",
+        "\n"
+      ],
       "metadata": {
         "id": "f6cio78cQDDE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> Arguments:\n",
+        "\n",
+        "\"/root/.cache/kagglehub/datasets/katalniraj/adni-extracted-axial/versions/1\": This is the path to the directory containing the dataset. It assumes that the dataset is organized in subdirectories, where each subdirectory represents a class.\n",
+        "\n",
+        "validation_split=0.2: This specifies that 20% of the data should be reserved for validation.\n",
+        "\n",
+        "subset=\"training\": This indicates that the current dataset should contain the training portion of the data (80% in this case).\n",
+        "\n",
+        "seed=1337: This sets a random seed for reproducibility when splitting the data into training and validation sets.\n",
+        "\n",
+        "image_size=[180, 180]: This resizes all images to 180x180 pixels.\n",
+        "\n",
+        "batch_size=16: This specifies that the dataset should be batched into groups of 16 images."
+      ],
+      "metadata": {
+        "id": "DgsDc86gLnFD"
       }
     }
   ]
