--- a/Simple_method_Jan12.ipynb
+++ b/Simple_method_Jan12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMhtTdHVvUE/A45Cy2O4rmS",
+      "authorship_tag": "ABX9TyOOO8pCLogZHvXxUn0WZY45",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -257,6 +257,16 @@
       ],
       "metadata": {
         "id": "DgsDc86gLnFD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> The resulting train_ds is a tf.data.Dataset object that can be used for training a machine learning model.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "p59LA32-L0k_"
       }
     }
   ]
