--- a/Simple_method_Jan12.ipynb
+++ b/Simple_method_Jan12.ipynb
@@ -4,8 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOOO8pCLogZHvXxUn0WZY45",
+      "authorship_tag": "ABX9TyNZjeZRuHZU/6bwM12HEMgj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -267,6 +268,20 @@
       ],
       "metadata": {
         "id": "p59LA32-L0k_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Summary\n",
+        "1. The code downloads a dataset from Kaggle using the kagglehub library.\n",
+        "\n",
+        "2. It then loads the dataset into TensorFlow Dataset objects for both training and validation, with images resized to 180x180 pixels and batched into groups of 16.\n",
+        "\n",
+        "3. The dataset is split into 80% training and 20% validation sets, with a fixed random seed for reproducibility."
+      ],
+      "metadata": {
+        "id": "gb8iNxmTMGop"
       }
     }
   ]
