--- a/Simple_method_Jan12.ipynb
+++ b/Simple_method_Jan12.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNZjeZRuHZU/6bwM12HEMgj",
+      "authorship_tag": "ABX9TyMY4HJjoV50MCyzNixaSueU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -283,6 +283,33 @@
       "metadata": {
         "id": "gb8iNxmTMGop"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "classnames = train_ds.class_names\n",
+        "len(classnames),train_ds.class_names"
+      ],
+      "metadata": {
+        "id": "luBn4--IMXgq",
+        "outputId": "b911227f-1086-4aaa-af8a-631fe4ca42d2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, ['Axial'])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     }
   ]
 }
