number and names of Classes

--- a/Simple_method_Jan12.ipynb
+++ b/Simple_method_Jan12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNwyu+bcqVlEVzY/x66cIjv",
+      "authorship_tag": "ABX9TyMdC3A4QeJoEaouXLcNb19o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -281,6 +281,15 @@
       ],
       "metadata": {
         "id": "gb8iNxmTMGop"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## number and names of Classes"
+      ],
+      "metadata": {
+        "id": "7fenIPncOgb0"
       }
     },
     {
