--- a/Simple_method_Jan12.ipynb
+++ b/Simple_method_Jan12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPP42SsFLPK3HugDurNky3Z",
+      "authorship_tag": "ABX9TyO/0jAxD15igQB2h/8j33o+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -447,11 +447,11 @@
         "plt.style.available"
       ],
       "metadata": {
-        "id": "6seSSrv_UsOL",
-        "outputId": "7a1e2c9e-9d01-4e54-8f0e-6a59577be608",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6seSSrv_UsOL",
+        "outputId": "7a1e2c9e-9d01-4e54-8f0e-6a59577be608"
       },
       "execution_count": 33,
       "outputs": [
@@ -494,6 +494,15 @@
           "execution_count": 33
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> This code defines a function visualize_images_by_class that visualizes images from a TensorFlow dataset, grouped by their class labels. It uses matplotlib to create a grid of images, with each row representing a class and each column representing an image from that class.\n"
+      ],
+      "metadata": {
+        "id": "I75Uz3uSWLYp"
+      }
     }
   ]
 }
