--- a/Simple_method_Jan12.ipynb
+++ b/Simple_method_Jan12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyO/0jAxD15igQB2h/8j33o+",
+      "authorship_tag": "ABX9TyMp5mN1raGxsv3MLoi5ZR3K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -502,6 +502,136 @@
       ],
       "metadata": {
         "id": "I75Uz3uSWLYp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Function Definition**\n",
+        "```python\n",
+        "def visualize_images_by_class(dataset, class_names, images_per_class=3, figsize=(15, 8)):\n",
+        "```\n",
+        "- **Purpose**: The function visualizes images from a TensorFlow dataset, grouped by their class labels.\n",
+        "- **Arguments**:\n",
+        "  - `dataset`: A TensorFlow dataset containing images and their corresponding labels.\n",
+        "  - `class_names`: A list of class names corresponding to the labels.\n",
+        "  - `images_per_class`: The number of images to display for each class (default is 3).\n",
+        "  - `figsize`: The size of the figure (width, height) for the visualization (default is `(15, 8)`).\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### **Step 1: Initialize a Dictionary to Store Images**\n",
+        "```python\n",
+        "class_images = {class_name: [] for class_name in class_names}\n",
+        "```\n",
+        "- A dictionary `class_images` is created to store images for each class. The keys are the class names, and the values are lists that will hold the images for each class.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### **Step 2: Iterate Through the Dataset**\n",
+        "```python\n",
+        "for images, labels in dataset.take(-1):\n",
+        "```\n",
+        "- The `dataset.take(-1)` ensures that the entire dataset is iterated through (if necessary) to collect enough images for each class.\n",
+        "- `images` and `labels` are the batches of images and their corresponding labels from the dataset.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### **Step 3: Collect Images for Each Class**\n",
+        "```python\n",
+        "for image, label in zip(images, labels):\n",
+        "    class_name = class_names[label]\n",
+        "    if len(class_images[class_name]) < images_per_class:\n",
+        "        class_images[class_name].append(image.numpy().astype(\"uint8\"))\n",
+        "```\n",
+        "- For each image and label in the batch:\n",
+        "  - The class name is determined using `class_names[label]`.\n",
+        "  - If the number of images collected for that class is less than `images_per_class`, the image is added to the list for that class.\n",
+        "  - The image is converted to a NumPy array and cast to `uint8` (8-bit unsigned integer) for compatibility with `matplotlib`.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### **Step 4: Stop When Enough Images Are Collected**\n",
+        "```python\n",
+        "if all(len(images) >= images_per_class for images in class_images.values()):\n",
+        "    break\n",
+        "```\n",
+        "- The loop breaks early if enough images have been collected for all classes. This avoids unnecessary iteration through the dataset.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### **Step 5: Apply a Beautiful Style Template**\n",
+        "```python\n",
+        "plt.style.use('Solarize_Light2')\n",
+        "```\n",
+        "- The `Solarize_Light2` style template is applied to make the visualization more aesthetically pleasing. This is one of the predefined styles in `matplotlib`.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### **Step 6: Plot the Images in a Grid**\n",
+        "```python\n",
+        "num_classes = len(class_names)\n",
+        "plt.figure(figsize=figsize)\n",
+        "\n",
+        "for i, class_name in enumerate(class_names):\n",
+        "    for j in range(images_per_class):\n",
+        "        ax = plt.subplot(num_classes, images_per_class, i * images_per_class + j + 1)\n",
+        "        plt.imshow(class_images[class_name][j])\n",
+        "        plt.title(f\"{class_name} ({j+1})\", fontsize=12, fontweight='bold', color='darkblue')\n",
+        "        plt.axis(\"off\")\n",
+        "```\n",
+        "- A figure is created with the specified size (`figsize`).\n",
+        "- A grid of subplots is created, with `num_classes` rows and `images_per_class` columns.\n",
+        "- For each class and each image:\n",
+        "  - The image is displayed using `plt.imshow`.\n",
+        "  - The title of the subplot is set to the class name and the image number (e.g., `AD (1)`).\n",
+        "  - The axes are turned off (`plt.axis(\"off\")`) to remove the borders around the images.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### **Step 7: Add a Super Title**\n",
+        "```python\n",
+        "plt.suptitle(\"Dataset Visualization by Class\", fontsize=16, fontweight='bold', y=1.02)\n",
+        "```\n",
+        "- A super title is added to the entire figure to describe the visualization. The `y=1.02` parameter adjusts the vertical position of the title.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### **Step 8: Adjust Layout and Display**\n",
+        "```python\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "```\n",
+        "- `plt.tight_layout()` ensures that the subplots are neatly arranged without overlapping.\n",
+        "- `plt.show()` displays the figure.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### **Usage**\n",
+        "```python\n",
+        "visualize_images_by_class(train_ds, train_ds.class_names, images_per_class=3, figsize=(15, 8))\n",
+        "```\n",
+        "- The function is called with the following arguments:\n",
+        "  - `train_ds`: The TensorFlow dataset to visualize.\n",
+        "  - `train_ds.class_names`: The list of class names.\n",
+        "  - `images_per_class=3`: Display 3 images per class.\n",
+        "  - `figsize=(15, 8)`: Set the figure size to 15x8 inches.\n",
+        "\n",
+        "\n",
+        "### **Key Features**\n",
+        "1. **Flexibility**:\n",
+        "   - The function can handle any number of classes and images per class.\n",
+        "   - The figure size and style template can be customized.\n",
+        "\n",
+        "2. **Efficiency**:\n",
+        "   - The loop breaks early once enough images are collected, saving computation time.\n",
+        "\n",
+        "3. **Aesthetics**:\n",
+        "   - The use of a predefined style template (`Solarize_Light2`) and custom titles makes the visualization visually appealing.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "RNYkR4RTWn1z"
       }
     }
   ]
