# Number of images in each class

--- a/Simple_method_Jan12.ipynb
+++ b/Simple_method_Jan12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMp5mN1raGxsv3MLoi5ZR3K",
+      "authorship_tag": "ABX9TyPGjZODAlqmK8bNJDLZla/b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -632,6 +632,15 @@
       ],
       "metadata": {
         "id": "RNYkR4RTWn1z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Number of images in each class\n"
+      ],
+      "metadata": {
+        "id": "9uWdddSrYJ2N"
       }
     }
   ]
