added numbet of classes train

--- a/Simple_method_Jan12.ipynb
+++ b/Simple_method_Jan12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPGjZODAlqmK8bNJDLZla/b",
+      "authorship_tag": "ABX9TyN6vHOyMDOBzH6Gm+kuGXOW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -642,6 +642,53 @@
       "metadata": {
         "id": "9uWdddSrYJ2N"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def count_images_per_class(dataset, class_names):\n",
+        "    \"\"\"\n",
+        "    Counts the number of images in each class in a TensorFlow dataset.\n",
+        "\n",
+        "    Args:\n",
+        "        dataset (tf.data.Dataset): The dataset to analyze.\n",
+        "        class_names (list): List of class names corresponding to the labels.\n",
+        "\n",
+        "    Returns:\n",
+        "        dict: A dictionary where keys are class names and values are the counts of images.\n",
+        "    \"\"\"\n",
+        "    # Initialize a dictionary to store counts for each class\n",
+        "    class_counts = {class_name: 0 for class_name in class_names}\n",
+        "\n",
+        "    # Iterate through the dataset to count images for each class\n",
+        "    for _, labels in dataset:\n",
+        "        for label in labels:\n",
+        "            class_name = class_names[label.numpy()]  # Convert label index to class name\n",
+        "            class_counts[class_name] += 1\n",
+        "\n",
+        "    return class_counts\n",
+        "\n",
+        "# Usage\n",
+        "class_counts = count_images_per_class(train_ds, train_ds.class_names)\n",
+        "print(\"Number of images in each class:\", class_counts)s"
+      ],
+      "metadata": {
+        "id": "CiCsrsFuYUDB",
+        "outputId": "2f47ccd2-a677-43eb-c403-4f96eda4daaa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of images in each class: {'AD': 896, 'CI': 2072, 'CN': 1156}\n"
+          ]
+        }
+      ]
     }
   ]
 }
