update the code

--- a/Simple_method_Jan12.ipynb
+++ b/Simple_method_Jan12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyP/Pu1+WdCU/iJ+g4JZTVys",
+      "authorship_tag": "ABX9TyPZd7JorGjYZGw0ayqH4Y2c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -644,6 +644,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##"
+      ],
+      "metadata": {
+        "id": "Depy6Sq-ZjgZ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def count_images_per_class(dataset, class_names):\n",
@@ -686,6 +695,55 @@
           "name": "stdout",
           "text": [
             "Number of images in each class: {'AD': 896, 'CI': 2072, 'CN': 1156}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## in Train"
+      ],
+      "metadata": {
+        "id": "aJmxdEqnZeco"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "\n",
+        "# Number of images in each class\n",
+        "NUM_IMAGES = []\n",
+        "\n",
+        "# Base directory containing the dataset\n",
+        "base_dir = \"/root/.cache/kagglehub/datasets/katalniraj/adni-extracted-axial/versions/1/Axial\"\n",
+        "\n",
+        "# Iterate through each class and count the number of images\n",
+        "for label in classnames:\n",
+        "    class_dir = os.path.join(base_dir, label)  # Create the full path to the class directory\n",
+        "    num_images = len(os.listdir(class_dir))    # Count the number of files in the directory\n",
+        "    NUM_IMAGES.append(num_images)              # Append the count to the NUM_IMAGES list\n",
+        "\n",
+        "# Print the results\n",
+        "print(\"Number of images in each class:\", NUM_IMAGES)\n",
+        "print(\"Class names:\", classnames)"
+      ],
+      "metadata": {
+        "id": "F2KYkYq8ZMR_",
+        "outputId": "8e771f54-1f38-410a-c25e-22c6710bd7da",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of images in each class: [1124, 2590, 1440]\n",
+            "Class names: ['AD', 'CI', 'CN']\n"
           ]
         }
       ]
