update the header

--- a/Simple_method_Jan12.ipynb
+++ b/Simple_method_Jan12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPZd7JorGjYZGw0ayqH4Y2c",
+      "authorship_tag": "ABX9TyM2jT2M7o9ladUY+OvkxsXQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -646,7 +646,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##"
+        "## Counts the number of images in each class in whole dataset"
       ],
       "metadata": {
         "id": "Depy6Sq-ZjgZ"
@@ -702,7 +702,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## in Train"
+        "## Count the Number of Images Per Class in the Training Dataset"
       ],
       "metadata": {
         "id": "aJmxdEqnZeco"
@@ -730,11 +730,11 @@
         "print(\"Class names:\", classnames)"
       ],
       "metadata": {
-        "id": "F2KYkYq8ZMR_",
-        "outputId": "8e771f54-1f38-410a-c25e-22c6710bd7da",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "F2KYkYq8ZMR_",
+        "outputId": "8e771f54-1f38-410a-c25e-22c6710bd7da"
       },
       "execution_count": 11,
       "outputs": [
