--- a/AD_Ad0.ipynb
+++ b/AD_Ad0.ipynb
@@ -61,20 +61,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Importing Required Libraries"
+      ],
+      "metadata": {
+        "id": "GzYcVvGCigCb"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "import os\n",
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "import tensorflow as tf\n",
-        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
-        "from tensorflow.keras.models import Sequential\n",
-        "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout\n",
-        "from tensorflow.keras.optimizers import Adam\n",
-        "from sklearn.metrics import confusion_matrix, roc_curve, auc, accuracy_score, precision_score, recall_score, f1_score\n",
-        "import itertools\n",
+        "\n",
         "\n",
         "np.random.seed(42)\n",
         "tf.random.set_seed(42)\n",
