--- a/AD_Ad0.ipynb
+++ b/AD_Ad0.ipynb
@@ -72,10 +72,52 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
+        "import os\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "import tensorflow as tf\n",
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout\n",
+        "from tensorflow.keras.optimizers import Adam\n",
+        "from sklearn.metrics import confusion_matrix, roc_curve, auc, accuracy_score, precision_score, recall_score, f1_score\n",
+        "import itertools"
+      ],
+      "metadata": {
+        "id": "2zUehCWgiyQc"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "np.random.seed(42)\n",
-        "tf.random.set_seed(42)\n",
+        "tf.random.set_seed(42)"
+      ],
+      "metadata": {
+        "id": "YkKR_jRFi5EP"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> used to make sure that the randomness in NumPy and TensorFlow is consistent across different runs of the program, enabling reproducibility."
+      ],
+      "metadata": {
+        "id": "PIVnY8KajFtf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "# Update the data directory to point to your Google Drive\n",
         "data_dir = '/content/drive/MyDrive/ADNI'\n",
