# Update the data directory to point to your Google Drive

--- a/AD_Ad0.ipynb
+++ b/AD_Ad0.ipynb
@@ -94,8 +94,8 @@
     {
       "cell_type": "code",
       "source": [
-        "np.random.seed(42)\n",
-        "tf.random.set_seed(42)"
+        "np.random.seed(42) # for NumPy's random number generator\n",
+        "tf.random.set_seed(42) # for TensorFlow's random number generator"
       ],
       "metadata": {
         "id": "YkKR_jRFi5EP"
@@ -115,12 +115,23 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
-        "\n",
-        "\n",
         "# Update the data directory to point to your Google Drive\n",
-        "data_dir = '/content/drive/MyDrive/ADNI'\n",
+        "data_dir = '/content/drive/MyDrive/ADNI'"
+      ],
+      "metadata": {
+        "id": "WV1XlmOpjcYX"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "# Load data\n",
         "def load_data(data_dir):\n",
