--- a/AD_Ad0.ipynb
+++ b/AD_Ad0.ipynb
@@ -92,10 +92,19 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Setting Random Seeds for Reproducibility in NumPy and TensorFlow"
+      ],
+      "metadata": {
+        "id": "T0CTIvdGjpsV"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "np.random.seed(42) # for NumPy's random number generator\n",
-        "tf.random.set_seed(42) # for TensorFlow's random number generator"
+        "np.random.seed(42)\n",
+        "tf.random.set_seed(42)"
       ],
       "metadata": {
         "id": "YkKR_jRFi5EP"
