Loading Image Data from Directory

--- a/AD_Ad0.ipynb
+++ b/AD_Ad0.ipynb
@@ -109,7 +109,7 @@
       "metadata": {
         "id": "YkKR_jRFi5EP"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -134,14 +134,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Loading Image Data from Directory"
+      ],
+      "metadata": {
+        "id": "IHlR9F97kK1h"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
         "# Load data\n",
         "def load_data(data_dir):\n",
         "    images, labels = [], []\n",
@@ -155,7 +158,24 @@
         "            labels.append(label)\n",
         "    images = np.array(images)\n",
         "    labels = np.array(labels)\n",
-        "    return images, labels\n",
+        "    return images, labels"
+      ],
+      "metadata": {
+        "id": "M1zfQB5skCcK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "images, labels = load_data(data_dir)\n",
         "labels = np.where(labels == 'AD', 1, 0)\n",
