added one hot encode

--- a/AD_Ad0.ipynb
+++ b/AD_Ad0.ipynb
@@ -163,8 +163,52 @@
       "metadata": {
         "id": "M1zfQB5skCcK"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "images, labels = load_data(data_dir)\n",
+        "labels = np.where(labels == 'AD', 1, 0)\n",
+        "one_hot = np.zeros((labels.shape[0], 2))\n",
+        "one_hot[np.arange(labels.shape[0]), labels] = 1\n",
+        "labels = one_hot"
+      ],
+      "metadata": {
+        "id": "bXhbms16k9qd"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(labels)"
+      ],
+      "metadata": {
+        "id": "mlZP3D1LlN6d",
+        "outputId": "f29c28d2-18b6-42af-c851-f03c626d1932",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0. 1.]\n",
+            " [0. 1.]\n",
+            " [0. 1.]\n",
+            " ...\n",
+            " [1. 0.]\n",
+            " [1. 0.]\n",
+            " [1. 0.]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -177,11 +221,7 @@
         "\n",
         "\n",
         "\n",
-        "images, labels = load_data(data_dir)\n",
-        "labels = np.where(labels == 'AD', 1, 0)\n",
-        "one_hot = np.zeros((labels.shape[0], 2))\n",
-        "one_hot[np.arange(labels.shape[0]), labels] = 1\n",
-        "labels = one_hot\n",
+        "\n",
         "\n",
         "# Train-validation-test split\n",
         "X_train, X_test, y_train, y_test = train_test_split(images, labels, test_size=0.05, random_state=42, stratify=labels)\n",
