--- a/AD_Ad0.ipynb
+++ b/AD_Ad0.ipynb
@@ -167,6 +167,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Loading and One-Hot Encoding Labels for Image Data"
+      ],
+      "metadata": {
+        "id": "X_PSVstslllK"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "images, labels = load_data(data_dir)\n",
@@ -187,11 +196,11 @@
         "print(labels)"
       ],
       "metadata": {
-        "id": "mlZP3D1LlN6d",
-        "outputId": "f29c28d2-18b6-42af-c851-f03c626d1932",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mlZP3D1LlN6d",
+        "outputId": "f29c28d2-18b6-42af-c851-f03c626d1932"
       },
       "execution_count": 8,
       "outputs": [
@@ -213,19 +222,30 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
         "# Train-validation-test split\n",
         "X_train, X_test, y_train, y_test = train_test_split(images, labels, test_size=0.05, random_state=42, stratify=labels)\n",
-        "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size=0.1, random_state=42, stratify=y_train)\n",
+        "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size=0.1, random_state=42, stratify=y_train)"
+      ],
+      "metadata": {
+        "id": "VQKFBECElr7F"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "# Display class distribution before augmentation\n",
         "sns.countplot(x=np.argmax(y_train, 1))\n",
