Splitting Data into Training, Validation, and Test Sets

--- a/AD_Ad0.ipynb
+++ b/AD_Ad0.ipynb
@@ -220,6 +220,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Splitting Data into Training, Validation, and Test Sets"
+      ],
+      "metadata": {
+        "id": "0aBCFrTMl0X1"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Train-validation-test split\n",
