added shape dataset

--- a/AD_Ad0.ipynb
+++ b/AD_Ad0.ipynb
@@ -244,22 +244,60 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
+        "print(X_train.shape, y_train.shape)\n",
+        "print(X_val.shape, y_val.shape)\n",
+        "print(X_test.shape, y_test.shape)"
+      ],
+      "metadata": {
+        "id": "_glkiG0omCXf",
+        "outputId": "8ac258bf-2573-43a5-8444-3a987eaca214",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(1422, 64, 64, 3) (1422, 2)\n",
+            "(158, 64, 64, 3) (158, 2)\n",
+            "(84, 64, 64, 3) (84, 2)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Display class distribution before augmentation\n",
         "sns.countplot(x=np.argmax(y_train, 1))\n",
         "plt.title('Class Distribution Before Augmentation')\n",
-        "plt.show()\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "7EAJd0ttmBm3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "batch_size = 64\n",
         "\n",
