--- a/AD_Ad0.ipynb
+++ b/AD_Ad0.ipynb
@@ -354,9 +354,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Applying Data Augmentation Techniques"
+      ],
+      "metadata": {
+        "id": "eiwyAkTqnuCs"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "\n",
         "# Data Augmentation\n",
         "train_datagen = ImageDataGenerator(\n",
         "    rescale=1./255,\n",
@@ -367,7 +375,19 @@
         "    zoom_range=0.2,\n",
         "    horizontal_flip=True,\n",
         "    fill_mode='nearest'\n",
-        ")\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "NB6jO5Dzns0A"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
         "train_datagen_test = ImageDataGenerator(rescale=1./255)\n",
         "val_datagen = ImageDataGenerator(rescale=1./255)\n",
         "test_datagen = ImageDataGenerator(rescale=1./255)\n",
